--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/logo.svg"/>
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo100.png"/>
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/logo100.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ratio Finance Web App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo100.png" />
     <!--
