--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo100.png"/>
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/logo100.png"/>
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/image-logo.svg"/>
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/image-logo.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Ratio Finance Web App"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo100.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/image-logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
